--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="https://via.placeholder.com/75x22" width="75" height="22" alt="Пинк">
+        <img class="page-header__logo-image" src="https://via.placeholder.com/75x22" width="75" height="22" alt="Логотип Пинка.">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -35,22 +35,22 @@
         <h2 class="visually-hidden">Ссылки для скачивания</h2>
 
         <p class="intro__slogan">Взгляните на жизнь иначе</p>
-        <img class="intro__img" src="https://via.placeholder.com/498x314" alt="Пинк на Айфоне">
+        <img class="intro__img" src="https://via.placeholder.com/498x314" alt="Здание через розовый фильтр на Айфоне.">
         <a class="intro__download-link button" href="https://www.apple.com/ru/ios/app-store/">Скачать приложениие</a>
         <ul class="intro__download-list download-list">
           <li class="download-list__item">
             <a href="https://www.apple.com/ru/ios/app-store/">
-              <img class="intro__img" src="https://via.placeholder.com/47x56" alt="Пинк в App Store">
+              <img class="download-list__img" src="https://via.placeholder.com/47x56" alt="Приложение Пинк в App Store.">
             </a>
           </li>
           <li class="download-list__item">
             <a href="https://play.google.com/store/apps?hl=ru">
-              <img class="intro__img" src="https://via.placeholder.com/43x47" alt="Пинк в Google Play">
+              <img class="download-list__img" src="https://via.placeholder.com/43x47" alt="Приложениие Пинк в Google Play.">
             </a>
           </li>
           <li class="download-list__item">
             <a href="https://www.microsoft.com/ru-ru/store/apps/windows">
-              <img class="intro__img" src="https://via.placeholder.com/43x47" alt="Пинк в Windows Store">
+              <img class="download-list__img" src="https://via.placeholder.com/43x47" alt="Приложение Пинк в Windows Store.">
             </a>
           </li>
         </ul>
@@ -74,7 +74,7 @@
           <li class="features__item">
             <h3 class="features__title features__item--making-friends">Заводит новых друзей</h3>
             <p class="features__title">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-            <img class="features__picture" src="https://via.placeholder.com/157x320" alt="Розовая фотография с приветствием">
+            <img class="features__picture" src="https://via.placeholder.com/157x320" alt="Фотография мусорных баков через розовый фильтр с приветствием на Айфоне.">
           </li>
         </ul>
       </section>
