--- a/source/photo.html
+++ b/source/photo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <title>Пинк: Фотографии</title>
@@ -7,7 +7,7 @@
   <body class="photo-main">
     <header class="page-header">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="https://via.placeholder.com/75x22" width="75" height="22" alt="Пинк">
+        <img class="page-header__logo-image" src="https://via.placeholder.com/75x22" width="75" height="22" alt="Логотип Пинка.">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -36,47 +36,61 @@
         <p class="cards__slogan">Взгляните на фотографии, которые выкладывают пользователи!</p>
         <p class="cards__slogan">Видите, как не хватает ваших?</p>
         <ul class="cards__list">
-          <li class="cards__item cards__item--panorama-of-the-day">
-            <img class="cards__photo" src="https://via.placeholder.com/320x137" width="320" height="137" alt="Панорама">
-            <p class="cards__user">Анна <span class="cards__posting-time">(5 минут назад)</span></p>
-            <p class="cards__message">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-            <p class="cards__likes">Нравится: 215</p>
+          <li class="cards__item item cards__item--panorama-of-the-day">
+            <article class="item__post-content post-content">
+              <img class="post-content__photo" src="https://via.placeholder.com/320x137" width="320" height="137" alt="Панорамный вид на холмы с моста.">
+              <p class="post-content__user">Анна <span class="cards__posting-time">(5 минут назад)</span></p>
+              <p class="post-content__message">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+              <p class="post-content__likes">Нравится: 215</p>
+            </article>
           </li>
-          <li class="cards__item">
-            <img  class="cards__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Машина">
-            <p class="cards__user">Левон <span class="cards__posting-time">(5 часов назад)</span></p>
-            <p class="cards__message">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-            <p class="cards__likes">Нравится: 356</p>
+          <li class="cards__item item cards__item--panorama-of-the-day">
+            <article class="item__post-content post-content">
+              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Белая машина у темной стены и штатив для камеры на переднем плане.">
+              <p class="post-content__user">Левон <span class="cards__posting-time">(5 часов назад)</span></p>
+              <p class="post-content__message">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+              <p class="post-content__likes">Нравится: 356</p>
+            </article>
           </li>
-          <li class="cards__item">
-            <img class="cards__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Барабанная установка">
-            <p class="cards__user">Антон <span class="cards__posting-time">(12 часов назад)</span></p>
-            <p class="cards__message">Соседи будут рады!</p>
-            <p class="cards__likes">Нравится: 666</p>
+          <li class="cards__item item cards__item--panorama-of-the-day">
+            <article class="item__post-content post-content">
+              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Барабанная установка с подключенными микрофонами.">
+              <p class="post-content__user">Антон <span class="cards__posting-time">(12 часов назад)</span></p>
+              <p class="post-content__message">Соседи будут рады!</p>
+              <p class="post-content__likes">Нравится: 666</p>
+            </article>
           </li>
-          <li class="cards__item">
-            <img class="cards__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Вид неба">
-            <p class="cards__user">Борис <span class="cards__posting-time">(20 часов назад)</span></p>
-            <p class="cards__message">Здесь могла быть ваша цитата о высоком и вечном.</p>
-            <p class="cards__likes">Нравится: 215</p>
+          <li class="cards__item item cards__item--panorama-of-the-day">
+            <article class="item__post-content post-content">
+              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Вид неба через прозрачную крышу небоскреба.">
+              <p class="post-content__user">Борис <span class="cards__posting-time">(20 часов назад)</span></p>
+              <p class="post-content__message">Здесь могла быть ваша цитата о высоком и вечном.</p>
+              <p class="post-content__likes">Нравится: 215</p>
+            </article>
           </li>
-          <li class="cards__item">
-            <img class="cards__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Кубанская бахча">
-            <p class="cards__user">Сергей <span class="cards__posting-time">(25 часов назад)</span></p>
-            <p class="cards__message">Самая кубанская в мире!</p>
-            <p class="cards__likes">Нравится: 4</p>
+          <li class="cards__item item cards__item--panorama-of-the-day">
+            <article class="item__post-content post-content">
+              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Продажа дынь и арбусов на кубанской бахче.">
+              <p class="post-content__user">Сергей <span class="cards__posting-time">(25 часов назад)</span></p>
+              <p class="post-content__message">Самая кубанская в мире!</p>
+              <p class="post-content__likes">Нравится: 4</p>
+            </article>
           </li>
-          <li class="cards__item">
-            <img class="cards__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Вид с вершины горы">
-            <p class="cards__user">Максим <span class="cards__posting-time">(40 часов назад)</span></p>
-            <p class="cards__message">Где снег-то?</p>
-            <p class="cards__likes">Нравится: 150</p>
+          <li class="cards__item item cards__item--panorama-of-the-day">
+            <article class="item__post-content post-content">
+              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Вид с вершины горы вниз с ногами фотографирующего.">
+              <p class="post-content__user">Максим <span class="cards__posting-time">(40 часов назад)</span></p>
+              <p class="post-content__message">Где снег-то?</p>
+              <p class="post-content__likes">Нравится: 150</p>
+            </article>
           </li>
-          <li class="cards__item">
-            <img class="cards__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Крыло самолета">
-            <p class="cards__user">Надежда <span class="cards__posting-time">(45 часов назад)</span></p>
-            <p class="cards__message">Всем GM и взаимные лайки!</p>
-            <p class="cards__likes">Нравится: 2560</p>
+          <li class="cards__item item cards__item--panorama-of-the-day">
+            <article class="item__post-content post-content">
+              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Крыло самолета в воздухе на фоне яркого Солнца.">
+              <p class="post-content__user">Надежда <span class="cards__posting-time">(45 часов назад)</span></p>
+              <p class="post-content__message">Всем GM и взаимные лайки!</p>
+              <p class="post-content__likes">Нравится: 2560</p>
+            </article>
           </li>
         </ul>
       </section>
@@ -84,25 +98,25 @@
 
     <footer class="page-footer">
       <a class="page-footer__logo" href="index.html">
-        <img class="page-footer__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Пинк">
+        <img class="page-footer__logo-image" src="https://via.placeholder.com/147x40" width="147" height="40" alt="Логотип Пинка.">
       </a>
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link--twitter" href="https://twitter.com/htmlacademy_ru?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Мы в Твиттере</a>
+            <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Мы в Твиттере</a>
           </li>
           <li class="social__item">
-            <a class="social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
           </li>
           <li class="social__item">
-            <a class="social__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютубе</a>
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютубе</a>
           </li>
         </ul>
       </div>
-      <div class="page-footer__copyright">
+      <div class="page-footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__image" src="https://via.placeholder.com/27x34" alt="HTML Academy">
+          <img class="copyright__image" src="https://via.placeholder.com/27x34" alt="Логотип HTML Academy.">
         </a>
       </div>
     </footer>
