--- a/source/index.html
+++ b/source/index.html
@@ -78,6 +78,89 @@
           </li>
         </ul>
       </section>
+
+      <section class="reviews">
+        <div class="reviews__wrapper slider">
+          <h2 class="reviews__title visually-hidden">Отзывы</h2>
+          <div class="reviews__list slider__list">
+            <article class="reviews__item slider__item item">
+              <blockquote class="item__review-content review-content">
+                <cite class="review-content__user">Николай Петров</cite>
+                <p class="review-content__text">
+                  «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
+                  А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+                </p>
+              </blockquote>
+            </article>
+          </div>
+          <p class="reviews__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
+
+      <section class="price">
+        <div class="price__wrapper slider">
+          <table class="price__table">
+            <tr>
+              <th class="price__element">
+                <span class="price__tariff">База</span>
+                <span class="price__value">1,99 USD</span>
+              </th>
+              <th class="price__element price__element--hit">
+                <span class="price__tariff">Стандарт</span>
+                <span class="price__value">3,99 USD</span>
+              </th>
+              <th class="price__element">
+                <span class="price__tariff">Анлим</span>
+                <span class="price__value">9,99 USD</span>
+              </th>
+            </tr>
+            <tr>
+              <td class="price__function price__function--on">Розовый фильтр</td>
+              <td class="price__function price__function--on">Розовый фильтр</td>
+              <td class="price__function price__function--on">Розовый фильтр</td>
+            </tr>
+            <tr>
+              <td class="price__function price__function--off">Смайлики</td>
+              <td class="price__function price__function--on">Смайлики</td>
+              <td class="price__function price__function--on">Смайлики</td>
+            </tr>
+            <tr>
+              <td class="price__function price__function--off">Комментарии</td>
+              <td class="price__function price__function--off">Комментарии</td>
+              <td class="price__function price__function--on">Комментарии</td>
+            </tr>
+          </table>
+          <p class="price__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
+
+      <footer class="page-footer">
+        <div class="page-footer__contacts contacts">
+          <p class="contacts__slogan">Остались вопросы?<br>Свяжитесь с нами!</p>
+          <a class="contacts__phone" href="tel:+78125556666">
+            <span class="contacts__call-us">Звоните:</span>+7 (812) 555-66-66
+          </a>
+          <a class="contacts__email" href="mailto:mail@htmlacademy.ru">
+            <span class="contacts__write-us">Пишите:</span>mail@htmlacademy.ru
+          </a>
+          <p class="contacts__address">
+            <span class="contacts__come-to-us">Приезжайте в гости:</span>ул. Большая
+            Конюшенная, 19/8
+          </p>
+          <a class="contacts__map">
+            <img class="contacts__map-image" src="https://via.placeholder.com/320x645" alt="Наш офис находится на ул. Большая
+            Конюшенная, 19/8">
+          </a>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
