--- a/source/photo.html
+++ b/source/photo.html
@@ -6,7 +6,7 @@
   </head>
   <body class="photo-main">
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image" src="https://via.placeholder.com/75x22" width="75" height="22" alt="Логотип Пинка.">
       </a>
       <nav class="main-nav">
@@ -36,63 +36,103 @@
         <p class="cards__slogan">Взгляните на фотографии, которые выкладывают пользователи!</p>
         <p class="cards__slogan">Видите, как не хватает ваших?</p>
         <ul class="cards__list">
-          <li class="cards__item item cards__item--panorama-of-the-day">
+          <li class="cards__item item item--panorama-of-the-day">
             <article class="item__post-content post-content">
-              <img class="post-content__photo" src="https://via.placeholder.com/320x137" width="320" height="137" alt="Панорамный вид на холмы с моста.">
+              <a href="#" class="post-content__photo-link">
+                <img class="post-content__photo" src="https://via.placeholder.com/320x137" width="320" height="137" alt="Панорамный вид на холмы с моста.">
+              </a>
               <p class="post-content__user">Анна <span class="cards__posting-time">(5 минут назад)</span></p>
               <p class="post-content__message">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
               <p class="post-content__likes">Нравится: 215</p>
             </article>
           </li>
-          <li class="cards__item item cards__item--panorama-of-the-day">
+          <li class="cards__item item">
             <article class="item__post-content post-content">
-              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Белая машина у темной стены и штатив для камеры на переднем плане.">
+              <a href="#" class="post-content__photo-link">
+                <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Белая машина у темной стены и штатив для камеры на переднем плане.">
+              </a>
               <p class="post-content__user">Левон <span class="cards__posting-time">(5 часов назад)</span></p>
               <p class="post-content__message">Вчера он на луну летал, сегодня в руки к нам попал.</p>
               <p class="post-content__likes">Нравится: 356</p>
             </article>
           </li>
-          <li class="cards__item item cards__item--panorama-of-the-day">
+          <li class="cards__item item">
             <article class="item__post-content post-content">
-              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Барабанная установка с подключенными микрофонами.">
+              <a href="#" class="post-content__photo-link">
+                <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Барабанная установка с подключенными микрофонами.">
+              </a>
               <p class="post-content__user">Антон <span class="cards__posting-time">(12 часов назад)</span></p>
               <p class="post-content__message">Соседи будут рады!</p>
               <p class="post-content__likes">Нравится: 666</p>
             </article>
           </li>
-          <li class="cards__item item cards__item--panorama-of-the-day">
+          <li class="cards__item item">
             <article class="item__post-content post-content">
-              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Вид неба через прозрачную крышу небоскреба.">
+              <a href="#" class="post-content__photo-link">
+                <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Вид неба через прозрачную крышу небоскреба.">
+              </a>
               <p class="post-content__user">Борис <span class="cards__posting-time">(20 часов назад)</span></p>
               <p class="post-content__message">Здесь могла быть ваша цитата о высоком и вечном.</p>
               <p class="post-content__likes">Нравится: 215</p>
             </article>
           </li>
-          <li class="cards__item item cards__item--panorama-of-the-day">
+          <li class="cards__item item">
             <article class="item__post-content post-content">
-              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Продажа дынь и арбусов на кубанской бахче.">
+              <a href="#" class="post-content__photo-link">
+                <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Продажа дынь и арбусов на кубанской бахче.">
+              </a>
               <p class="post-content__user">Сергей <span class="cards__posting-time">(25 часов назад)</span></p>
               <p class="post-content__message">Самая кубанская в мире!</p>
               <p class="post-content__likes">Нравится: 4</p>
             </article>
           </li>
-          <li class="cards__item item cards__item--panorama-of-the-day">
+          <li class="cards__item item">
             <article class="item__post-content post-content">
-              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Вид с вершины горы вниз с ногами фотографирующего.">
+              <a href="#" class="post-content__photo-link">
+                <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Вид с вершины горы вниз с ногами фотографирующего.">
+              </a>
               <p class="post-content__user">Максим <span class="cards__posting-time">(40 часов назад)</span></p>
               <p class="post-content__message">Где снег-то?</p>
               <p class="post-content__likes">Нравится: 150</p>
             </article>
           </li>
-          <li class="cards__item item cards__item--panorama-of-the-day">
+          <li class="cards__item item">
             <article class="item__post-content post-content">
-              <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Крыло самолета в воздухе на фоне яркого Солнца.">
+              <a href="#" class="post-content__photo-link">
+                <img class="post-content__photo" src="https://via.placeholder.com/280x180" width="280" height="180" alt="Крыло самолета в воздухе на фоне яркого Солнца.">
+              </a>
               <p class="post-content__user">Надежда <span class="cards__posting-time">(45 часов назад)</span></p>
               <p class="post-content__message">Всем GM и взаимные лайки!</p>
               <p class="post-content__likes">Нравится: 2560</p>
             </article>
           </li>
         </ul>
+      </section>
+
+      <section class="upload">
+        <p class="upload__slogan">Затмите их всех!</p>
+        <p class="upload__slogan">Выкладывайте все, что накопилось в телефоне!</p>
+        <div class="upload__editing editing">
+          <img src="https://via.placeholder.com/280x374" alt="Заснеженная дорога в лесу">
+          <form class="editing__form" action="https://echo.htmlacademy.ru" method="post">
+            <ul class="editing__instruments instruments">
+              <li class="instruments__element instruments__element--crop">
+                <label for="upload__crop">Размер</label>
+                <input id="upload__crop" name="crop-value" type="range">
+              </li>
+              <li class="instruments__element instruments__element--fill">
+                <label for="upload__fill">Заливка</label>
+                <input id="upload__fill" name="fill-value" type="range">
+              </li>
+              <li class="instruments__element instruments__element--contrast">
+                <label for="upload__contrast">Контрастность</label>
+                <input id="upload__contrast" name="contrast-value" type="range">
+              </li>
+            </ul>
+            <button class="editing__button editing__button--post button" type="submit">Запостить</button>
+            <button class="editing__button editing__button--cancel button" type="reset">Отмена</button>
+          </form>
+        </div>
       </section>
     </main>
 
