делает фиксы разметки и БЭМа основных страниц

--- a/source/index.html
+++ b/source/index.html
@@ -83,15 +83,25 @@
         <div class="reviews__wrapper slider">
           <h2 class="reviews__title visually-hidden">Отзывы</h2>
           <div class="reviews__list slider__list">
-            <article class="reviews__item slider__item item">
-              <blockquote class="item__review-content review-content">
-                <cite class="review-content__user">Николай Петров</cite>
-                <p class="review-content__text">
-                  «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
-                  А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
-                </p>
-              </blockquote>
-            </article>
+            <blockquote class="reviews__item slider__item item">
+              <cite class="reviews__user-name">Николай Петров</cite>
+              <p class="reviews__text">
+                «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи!
+                А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+              </p>
+            </blockquote>
+            <blockquote class="reviews__item slider__item item">
+              <cite class="reviews__user-name">Второй посетитель</cite>
+              <p class="reviews__text">
+                «Это приложение бла-бла-бла»
+              </p>
+            </blockquote>
+            <blockquote class="reviews__item slider__item item">
+              <cite class="reviews__user-name">Еще один посетитель</cite>
+              <p class="reviews__text">
+                «Большой текст хвалебного или не очень отзыва»
+              </p>
+            </blockquote>
           </div>
           <p class="reviews__toggles slider__toggles">
             <button class="slider__toggle" type="button">1</button>
@@ -145,15 +155,14 @@
       <footer class="page-footer">
         <div class="page-footer__contacts contacts">
           <p class="contacts__slogan">Остались вопросы?<br>Свяжитесь с нами!</p>
-          <a class="contacts__phone" href="tel:+78125556666">
-            <span class="contacts__call-us">Звоните:</span>+7 (812) 555-66-66
-          </a>
-          <a class="contacts__email" href="mailto:mail@htmlacademy.ru">
-            <span class="contacts__write-us">Пишите:</span>mail@htmlacademy.ru
-          </a>
-          <p class="contacts__address">
-            <span class="contacts__come-to-us">Приезжайте в гости:</span>ул. Большая
-            Конюшенная, 19/8
+          <p class="contacts__phone">
+            Звоните: <a class="contacts__phone-link" href="tel:+78125556666">+7 (812) 555-66-66</a>
+          </p>
+          <p class="contacts__email">
+            Пишите: <a class="contacts__email-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </p>
+          <p class="contacts__come-to-us">
+            Приезжайте в гости: <span class="contacts__come-to-us">ул. Большая Конюшенная, 19/8</span>
           </p>
           <a class="contacts__map">
             <img class="contacts__map-image" src="https://via.placeholder.com/320x645" alt="Наш офис находится на ул. Большая
